# MGGame

./: .clang-format  .gitignore  CMakeLists.txt
app/Server/: CMakeLists.txt  main.cpp
app/testApp/: AppMain.cpp  CMakeLists.txt
cmake/: external_dependencies.cmake  target_set_ipo.cmake  target_set_warnings.cmake  turn_on_sanitizers.cmake
experimental/: CMakeLists.txt
experimental/StressClient/: CMakeLists.txt  StressAgent.cpp  StressAgent.hpp  main.cpp
include/core/: core.hpp
include/core/Logger/: Logger.hpp  Logger.ipp
include/core/Memory/: StackMemory.hpp
libs/core/: CMakeLists.txt
libs/core/Memory/: StackMemory.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/Memory/: StackMemory.test.cpp
tests/test_client/: CMakeLists.txt  main.cpp
